fix: click on skip-nav-link overlaps main content

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -115,6 +115,11 @@ $type-levels: 6, 5, 4, 3, 2, 1;
     font-weight: 700;
   }
 
+  .nav-item,
+  .navigation .dropdown-menu a.dropdown-item { 
+    font-size: 20px;
+  }
+
   .numbers-text {
     font-size: 48px;
     line-height: 1.5;
