--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -59,7 +59,6 @@
   }
 
   .nav-item {
-    font-size: 0.9rem;
     .nav-link {
       display: inline-block;
       line-height: 1;
